--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 			<groupId>com.platform</groupId>
 			<artifactId>platform.mybatis.plugin.common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.code.gson</groupId>
+					<artifactId>gson</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
