--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,11 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.javacsv</groupId>
+			<artifactId>javacsv</artifactId>
+			<version>2.0</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
