--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,13 +12,13 @@ spring:
     dataAlias: master,hypotaxis
     master:
       type: com.alibaba.druid.pool.DruidDataSource
-      url: jdbc:mysql://localhost:3306/platform_hm?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useUnicode=true&verifyServerCertificate=false&useSSL=false&requireSSL=false
+      url: jdbc:mysql://localhost:3306/platform_hm?serverTimezone=Asia/Shanghai&allowMultiQueries=true&characterEncoding=utf8&useUnicode=true&verifyServerCertificate=false&useSSL=false&requireSSL=false
       username: root
       password: "23990308"
       driverClassName: com.mysql.cj.jdbc.Driver
     hypotaxis:
       type: com.alibaba.druid.pool.DruidDataSource
-      url: jdbc:mysql://localhost:3306/plafrorm.pass.field?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useUnicode=true&verifyServerCertificate=false&useSSL=false&requireSSL=false
+      url: jdbc:mysql://localhost:3306/platform.table.field.mapping?serverTimezone=Asia/Shanghai&allowMultiQueries=true&characterEncoding=utf8&useUnicode=true&verifyServerCertificate=false&useSSL=false&requireSSL=false
       username: root
       password: "23990308"
       driverClassName: com.mysql.cj.jdbc.Driver
