--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 	</dependencyManagement>
 	<dependencies>
 		<dependency>
+			<groupId>com.platform</groupId>
+			<artifactId>platform.common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
